<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_username" />

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/tv_username_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_password"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_password" />

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/tv_password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </LinearLayout>

    

</LinearLayout>