<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >


    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="80dip"
        android:background="@drawable/login_middle_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="35dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/input_bg"
                android:hint="@string/login_tip_username"
                android:inputType="none"
                android:singleLine="true"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/input_bg"
                android:hint="@string/login_tip_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/remeber_pwdTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_label_remember_password"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/selectIV_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/check_button_normal"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/autoLoginIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_label_auto_login"
                        android:textColor="@color/black"
                        android:textSize="13sp" />

                    <ImageView
                        android:id="@+id/selectIV_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:background="@drawable/check_button_normal"
                        android:contentDescription="@string/app_name" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/login_button" />

                <Button
                    android:id="@+id/setting_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/setting_ip_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:background="@drawable/login_bottom_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/settingIPLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/login_settingip_bg"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/login_label_server_url"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <ImageView
                    android:contentDescription="@string/image_content"
                    android:id="@+id/helpImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="5dip"
                    android:src="@drawable/help" />
                
            </LinearLayout>

            <EditText
                android:id="@+id/serverurl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip"
                android:background="@drawable/input_bg"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>